<resources>
    <string name="app_name">FALL20Team04Sec01_ArtGallery</string>
    <string name="email_address">Email address</string>
    <string name="password">Password</string>
    <string name="forgot_your_password">Forgot your password?</string>
    <string name="login">Login</string>
    <string name="name">name</string>
    <string name="phone_number">phone number</string>
    <string name="c_password">password</string>
    <string name="add_new">ADD NEW</string>
    <string name="existing">EXISTING</string>
    <string name="title_home">Gallery</string>
    <string name="title_dashboard">Categories</string>
    <string name="search">Search</string>
    <string name="country">Country</string>
    <string name="gallery">Gallery</string>
    <string name="artist">Artist</string>
    <string name="artists">Artists</string>
    <string name="cart">My Bag</string>
    <string name="my_profile">More</string>
    <string name="admin_id">Admin id</string>
    <string name="AdminID">adminID</string>
</resources>