<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home"
        android:title="@string/title_home"/>


    <item
        android:id="@+id/navigation_search"
        android:icon="@drawable/search_icon"
        android:title="@string/search"/>


    <item
        android:id="@+id/navigation_dashboard"
        android:icon="@drawable/categories"
        android:title="@string/title_dashboard"/>

    <item
        android:id="@+id/navigation_cart"
        android:icon="@drawable/shopping_bag"
        android:title="@string/cart"/>

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/ic_more"
        android:title="@string/my_profile"/>

</menu>
