<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_ag"
    android:orientation="vertical"
    android:padding="@dimen/activity_vertical_margin">


    <LinearLayout
        android:id="@+id/name_view"
        style="@style/AppTheme.RoundedCornerMaterialButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/name_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:padding="10dp"
            android:hint="@string/name"
            android:inputType="textEmailAddress"
            android:tooltipText="@string/name" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/email_view"
        style="@style/AppTheme.RoundedCornerMaterialButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="10dp"
        >

        <EditText
            android:id="@+id/email_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:padding="10dp"
            android:hint="@string/email_address"
            android:inputType="textEmailAddress"
            android:tooltipText="@string/email_address" />

    </LinearLayout>


    <LinearLayout
        android:id="@+id/phone_view"
        style="@style/AppTheme.RoundedCornerMaterialButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="10dp">

        <EditText
            android:id="@+id/phone_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:padding="10dp"
            android:hint="@string/phone_number"
            android:inputType="number"
            android:tooltipText="Phone_Number" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/password_view"
        style="@style/AppTheme.RoundedCornerMaterialButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/r_password_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:tooltipText="@string/password" />
    </LinearLayout>


    <LinearLayout
        android:id="@+id/address_view"
        style="@style/AppTheme.RoundedCornerMaterialButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/r_address_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:padding="10dp"
            android:hint="Address"
            android:inputType="textPassword" />
    </LinearLayout>

    <Button
        android:id="@+id/create_account_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/green"
        android:layout_marginTop="10dp"
        android:text="Create Account"
        android:textAppearance="?android:textAppearanceLarge"
        android:textColor="@color/icons"
        android:textStyle="bold" />

</LinearLayout>

